--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -1,10 +1,13 @@
-FROM python:3.9
+FROM tiangolo/uwsgi-nginx-flask:python3.9
+
 ENV PYTHONUNBUFFERED 1
-WORKDIR /app
-COPY requirements.txt /app/requirements.txt
-RUN pip install -r requirements.txt
+
+COPY ./requirements.txt /app/requirements.txt
+
+RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt 
+
 COPY . /app
 
-CMD export FLASK_APP=main &&\
-     export FLASK_ENV=development &&\
-     flask run
+EXPOSE 5000
+
+CMD flask db upgrade && flask run
