--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -5,6 +5,8 @@ Flask-Migrate==2.5.3
 Flask-Script==2.0.6
 Flask-Cors==3.0.9
 requests==2.25.0
+mysqlclient==2.1.1
 pika==1.3.0
 itsdangerous==2.0.1
 werkzeug==2.1.2
+python-dotenv
