--- a/admin/docker-compose.yml
+++ b/admin/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     command: 'python3 manage.py runserver 0.0.0.0:8000'
     ports:
       - 8000:8000
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - .:/app
     depends_on:
@@ -18,6 +20,8 @@ services:
       context: .
       dockerfile: Dockerfile
     command: 'python3 consumer.py'
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - db
 
