--- a/main/docker-compose.yml
+++ b/main/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: 'flask db upgrade && flask run --host=0.0.0.0'
+    command: 'flask run --host=0.0.0.0'
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     ports:
       - 8001:5000
     volumes:
@@ -19,6 +21,8 @@ services:
       context: .
       dockerfile: Dockerfile
     command: 'python consumer.py'
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     depends_on:
       - db
 
