--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -1,11 +1,11 @@
-Flask==2.1.2
-Flask-SQLAlchemy==2.5.1
-SQLAlchemy==1.4.39
-Flask-Migrate==2.5.3
+Flask
+Flask-SQLAlchemy
+SQLAlchemy
+Flask-Migrate
 Flask-Script==2.0.6
 Flask-Cors==3.0.9
 requests==2.25.0
-mysqlclient==2.1.1
+mysqlclient
 pika==1.3.0
 itsdangerous==2.0.1
 werkzeug==2.1.2
